Issue with hover on button probably due to z-index and overlay

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -139,6 +139,11 @@ header:before {
         padding: 8px 37px;
         font-size: 12px;
     }
+    .btn-first:hover {
+        color: #111;
+        border-color: transparent;
+        background: #fff;
+    }
 }
 
 // services
